# DRP-Texture-Recognition

./: .gitignore  drp_multi_layer.ipynb  drp_single_layer.ipynb  drp_single_layer_with_aux.ipynb  pyproject.toml
drp/: __init__.py  const.py  utils.py
drp/models/: __init__.py  base.py  multi.py  single.py  single_aux.py
scripts/: dataset.py  eval.py  train_cuticle_multi.py  train_cuticle_single.py  train_cuticle_single_aux.py
