[tool.poetry]
name = "drp"
version = "0.1.0"
description = "Deep Residual Pooling for Texture Classification"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9, <3.10"
numpy = "^1.22.3"
torch = "^1.11.0"
matplotlib = "^3.5.1"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.13.0"
autopep8 = "^1.6.0"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
